src/backend/snapshots/one_thousand_deaths__backend__store__tests__initial.snap
---
source: src/backend/store.rs
expression: store
---
tuples:
  ? Cell:
      x: 0
      y: 1
  : Location:
      Location:
        x: 0
        y: 1
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 2
      y: 0
  : Location:
      Location:
        x: 2
        y: 0
    Terrain:
      Terrain: Wall
  DefaultCell:
    Terrain:
      Terrain: Wall
    Objects:
      Objects: []
  Player:
    Location:
      Location:
        x: 1
        y: 1
    Objects:
      Objects: []
  ? Cell:
      x: 1
      y: 1
  : Location:
      Location:
        x: 1
        y: 1
    Terrain:
      Terrain: Dirt
    Character:
      Character: Player
  ? Cell:
      x: 1
      y: 0
  : Location:
      Location:
        x: 1
        y: 0
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 3
      y: 1
  : Location:
      Location:
        x: 3
        y: 1
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 1
      y: 2
  : Location:
      Location:
        x: 1
        y: 2
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 3
      y: 0
  : Location:
      Location:
        x: 3
        y: 0
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 3
      y: 2
  : Location:
      Location:
        x: 3
        y: 2
    Terrain:
      Terrain: Wall
  Game:
    Messages:
      Messages: []
  ? Cell:
      x: 2
      y: 2
  : Location:
      Location:
        x: 2
        y: 2
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 0
      y: 0
  : Location:
      Location:
        x: 0
        y: 0
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 0
      y: 2
  : Location:
      Location:
        x: 0
        y: 2
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 2
      y: 1
  : Location:
      Location:
        x: 2
        y: 1
    Terrain:
      Terrain: ClosedDoor
counter: 0

