src/backend/snapshots/one_thousand_deaths__backend__store__tests__move_into_door.snap
---
source: src/backend/store.rs
expression: store
---
tuples:
  ? Cell:
      x: 3
      y: 2
  : Location:
      Location:
        x: 3
        y: 2
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 0
      y: 1
  : Location:
      Location:
        x: 0
        y: 1
    Terrain:
      Terrain: Wall
  DefaultCell:
    Objects:
      Objects: []
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 3
      y: 0
  : Location:
      Location:
        x: 3
        y: 0
    Terrain:
      Terrain: Wall
  Player:
    Objects:
      Objects: []
    Location:
      Location:
        x: 2
        y: 1
  ? Cell:
      x: 0
      y: 0
  : Location:
      Location:
        x: 0
        y: 0
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 1
      y: 0
  : Location:
      Location:
        x: 1
        y: 0
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 2
      y: 0
  : Location:
      Location:
        x: 2
        y: 0
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 2
      y: 1
  : Location:
      Location:
        x: 2
        y: 1
    Terrain:
      Terrain: OpenDoor
  ? Cell:
      x: 3
      y: 1
  : Location:
      Location:
        x: 3
        y: 1
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 0
      y: 2
  : Location:
      Location:
        x: 0
        y: 2
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 1
      y: 2
  : Location:
      Location:
        x: 1
        y: 2
    Terrain:
      Terrain: Wall
  ? Cell:
      x: 2
      y: 2
  : Location:
      Location:
        x: 2
        y: 2
    Terrain:
      Terrain: Wall
counter: 0

